Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ It auto-generates API documentation from the code on runtime so the documentatio
 
 <p>Make sure the following line comes after all express middleware such as app.use(express.bodyParser());</p>
 
-<div class="highlight highlight-sh"><pre>docs<span class="o">(</span>app, mongoose<span class="o">)</span><span class="p">;</span> // If you don<span class="err">'</span>t use mongoose you can skip the 2nd param
+<div class="highlight highlight-sh"><pre>docs<span class="o">(</span>app, mongoose<span class="o">)</span><span class="p">;</span> // 2nd param is optional
 </pre></div>
 
 <p>That's it. The Docs web page should be accessible at Your-Base-URL/apiDocs</p>
