Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           <h1>
 <a name="express-mongoose-docs" class="anchor" href="#express-mongoose-docs"><span class="octicon octicon-link"></span></a>express-mongoose-docs</h1>
 
-<p><a href="https://travis-ci.org/nabeel-ahmad/express-mongoose-docs"><img src="https://travis-ci.org/nabeel-ahmad/express-mongoose-docs.svg?branch=master" alt="Build Status"></a></p>
+<p><a href="https://travis-ci.org/nabeel-ahmad/express-mongoose-docs"><img src="https://travis-ci.org/nabeel-ahmad/express-mongoose-docs.svg?branch=master" alt="Build Status"></a>
+<a href="https://coveralls.io/r/nabeel-ahmad/express-mongoose-docs?branch=master"><img src="https://coveralls.io/repos/nabeel-ahmad/express-mongoose-docs/badge.png?branch=master" alt="Coverage Status"></a></p>
 
 <p>This module will take away the pain of writing API and Data Model documentation for your Express &amp; Mongoose based REST API.
 It auto-generates API documentation from the code on runtime so the documentation always stays up to date.</p>
